--- a/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
@@ -6,10 +6,10 @@
 
 <div class="modal-body">
     <div class="well">
-        {{ post.titre }}<br>
-        {{ post.content }}<br>
+        Titre : {{ post.titre }}<br>
+        Contenu :{{ post.content }}<br>
         {% if post.lien is not empty %}
-            <a
+            Lien : <a
                     href="{{ post.lien }}"
                     target="_blank"
                     style="display: inline-block;text-decoration: none;font-family: Helvetica, Arial, sans-serif;color: #2c87c3;"><span
@@ -19,7 +19,7 @@
         <p>La suppresion du post est irreversible<br>
         Souhaitez-vous poursuivre ?</p>
 
-        <form name="mh_newsletterbundle_post_delete" action="{{ path('mh_newsletter_post_delete', {'id':post.id, 'newsletter_id':newsletter_id, 'rubrique_id':rubrique_id}) }}" method="post">
+        <form name="mh_newsletterbundle_post_delete" action="{{ path('mh_newsletter_post_delete', {'id':post.id}) }}" method="post">
             <input type="submit" value="Supprimer" class="btn btn-danger"/>
             {{ form_rest(form) }}
         </form>
