--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
@@ -1,22 +1,33 @@
-{% extends "MHNewsletterBundle::layout.html.twig" %}
 
-{% block title %}
-    Suppression - {{ parent() }}
-{% endblock %}
+<div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+    <h4 class="modal-title">Suppression de la Rubrique</h4>
+</div>
 
-{% block bundle_body %}
-    <h2>Supprimer une Rubrique</h2>
-    <hr>
-    <p>La suppresion de la Rubrique est irreversible et entrainera la suppression de tous les posts associés<br>
-    Souhaitez-vous poursuivre ?</p>
-
+<div class="modal-body">
     <div class="well">
-        <form action="{{ path('mh_newsletter_rubrique_delete', {'id':rubrique.id}) }}" method="post">
+        Rubrique
+        Nom : {{ rubrique.name }}<br>
+        Icone : {{ rubrique.icone }}<br>
+        Image :{{ rubrique.image }}<br>
+        <br>
+        Posts associés :
+        {% for post in rubrique.posts | sortbyfield('position') %}
+           {{ post.titre }}
+        {% endfor %}
+
+        <hr>
+        <p>La suppresion de la Rubrique est irreversible et entrainera la suppression de tous les posts associés<br>
+            Souhaitez-vous poursuivre ?</p>
+
+        <form name="mh_newsletterbundle_rubrique_delete" action="{{ path('mh_newsletter_rubrique_delete', {'id':rubrique.id}) }}" method="post">
             <input type="submit" value="Supprimer" class="btn btn-danger"/>
             {{ form_rest(form) }}
         </form>
     </div>
-    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': rubrique.newsletter.id} ) }}">Retour</a>
+</div>
 
-    <hr>
-{% endblock %}
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+</div>
