--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/create.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/create.html.twig
@@ -7,8 +7,10 @@
 {% block bundle_body %}
     <h2>Nouvelle Newsletter</h2>
     <hr>
-    <div class="well">
+    <div class="card border-primary">
+        <div class="card-body ">
         {{ form(form) }}
+        </div>
     </div>
     <hr>
 {% endblock %}
