--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit-header.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit-header.html.twig
@@ -8,10 +8,12 @@
 
     <h2>Edition Header</h2>
     <hr>
-
-    {{ form(form) }}
-    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id':newsletter.id} ) }}">Retour</a>
-  
+    <div class="card border-warning">
+        <div class="card-body">
+            {{ form(form) }}
+            <a class="btn btn-primary" href="{{ path('mh_newsletter_edit', {'id':newsletter.id} ) }}">Retour</a>
+        </div>
+    </div>
 
 {% endblock %}
 
