--- a/src/MH/NewsletterBundle/Resources/public/css/main.css
+++ b/src/MH/NewsletterBundle/Resources/public/css/main.css
@@ -19,3 +19,21 @@ body {
 .modal {
   overflow-y: scroll;
 }
+
+.bg {
+  background: url("../img/esiea-fond.jpg") no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 350px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  opacity: 1;
+  z-index: -1;
+}
+
+.jumbotron {
+  height: 350px;
+  color: white;
+  text-shadow: 20px 20px 50px #000000;
+  background:transparent;
+}
