--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/delete.html.twig
@@ -7,20 +7,22 @@
 {% block bundle_body %}
     <h2>Supprimer une Newsletter</h2>
     <hr>
+    <div class="card">
+        <div class="card-body border-danger">
     <p>La suppresion de la newsletter est irreversible<br>
     Souhaitez-vous poursuivre ?</p>
 
     <i>Newsletter : {{ newsletter.name }} crée le {{ newsletter.date|date("m/d/Y à H:i:s", "Europe/Paris") }} par {{ newsletter.auteur }}</i>
 
-    <div class="well">
-        <form action="{{ path('mh_newsletter_delete', {'id':newsletter.id}) }}" method="post">
-            <a href="{{ path('mh_newsletter_home') }}" class="btn btn-default">
-                <i class="glyphicon glyphicon-chevron-left"></i>
-                Retour à la liste
-            </a>
-            <input type="submit" value="Supprimer" class="btn btn-danger"/>
-            {{ form_rest(form) }}
-        </form>
+
+            <form action="{{ path('mh_newsletter_delete', {'id':newsletter.id}) }}" method="post">
+                <a href="{{ path('mh_newsletter_home') }}" class="btn btn-default">
+                    Retour à la liste
+                </a>
+                <input type="submit" value="Supprimer" class="btn btn-danger"/>
+                {{ form_rest(form) }}
+            </form>
+        </div>
     </div>
     <hr>
 {% endblock %}
