--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -15,37 +15,37 @@
             <ul id="add_rubrique_ul" class="list-unstyled rubrique-sortable">
             {% for rubrique in newsletter.rubriques | sortbyfield('position') %}
             <li  id="rubrique_{{ rubrique.id }}">
-                <div class="panel panel-success">
+                <div class="card border-success">
 
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a class="link-title-rubrique" data-toggle="collapse" data-parent="#accordion" href="#rubrique{{ rubrique.id }}">
+                    <div class="card-header">
+                        <h4 class="card-title ">
+                            <a class="link-title-rubrique text-success" data-toggle="collapse" data-parent="#accordion" href="#rubrique{{ rubrique.id }}">
                                 {{ rubrique.name }}</a>
                         </h4>
                     </div>
                     <div id="rubrique{{ rubrique.id }}" class="panel-collapse collapse">
-                        <div class="panel-body">
+                        <div class="card-body">
                             <div class="panel-group" id="accordion{{ rubrique.id }}">
                             <ul class="list-unstyled post-sortable">
 
                                 {% for post in rubrique.posts | sortbyfield('position') %}
                                     <li class="toto" id="post_{{ post.id }}">
-                                        <div class="panel panel-info">
-                                            <div class="panel-heading">
-                                                <h4 class="panel-title" >
-                                                    <a class="link-title" data-toggle="collapse" data-parent="#accordion{{ rubrique.id }}" href="#post{{ post.id }}rubrique{{ rubrique.id }}">
+                                        <div class="card border-info ">
+                                            <div class="card-header">
+                                                <h4 class="card-title " >
+                                                    <a class="text-info" data-toggle="collapse" data-parent="#accordion{{ rubrique.id }}" href="#post{{ post.id }}rubrique{{ rubrique.id }}">
                                                         {{ post.titre }}</a>
-                                                    <div class="btn btn-group-xs pull-right">
+                                                    <div class="btn btn-group-sm float-right">
                                                     <a class="btn btn-warning" title="Modifier" data-toggle="modal"
-                                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_post_edit',  {'id': post.id}    ) }}"><i class="glyphicon glyphicon-edit" aria-hidden="true"> Modifier</i></a>
+                                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_post_edit',  {'id': post.id}    ) }}"><i class="fa fa-edit" aria-hidden="true"> Modifier</i></a>
                                                     <a class="btn btn-danger" title="Supprimer" data-toggle="modal"
-                                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_post_delete', {'id': post.id}    ) }}"><i class="glyphicon glyphicon-trash" aria-hidden="true"> Supprimer</i></a>
+                                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_post_delete', {'id': post.id}    ) }}"><i class="fa fa-trash" aria-hidden="true"> Supprimer</i></a>
                                                     </div>
                                                 </h4>
                                                 <br>
                                             </div>
                                             <div id="post{{ post.id }}rubrique{{ rubrique.id }}" class="panel-collapse collapse">
-                                                <div class="panel-body">
+                                                <div class="card-body">
                                                     <div class="col-md-10 col-xs-9">
                                                         <div class="content-update">
                                                         {{ post.content|markdown|replace({'<p>':'', '</p>':''})|raw }}
@@ -67,22 +67,19 @@
                             </ul>
                             </div>
 
-                            <div class="row">
-                                <div class="col-lg-9 col-md-6 col-xs-6">
-                                    <a class="btn btn-primary" data-toggle="modal"
-                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id}    ) }}">new Post</a>
-                                </div>
-                                <div class="col-lg-3 col-md-6 col-xs-6">
-                                    <a class="btn btn-warning" title="Modifier" data-toggle="modal"
-                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_rubrique_edit',  {'id': rubrique.id}    ) }}"><i class="glyphicon glyphicon-edit" aria-hidden="true"> Modifier</i></a>
-                                    <a class="btn btn-danger" title="Modifier" data-toggle="modal"
-                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_rubrique_delete',  {'id': rubrique.id}    ) }}"><i class="glyphicon glyphicon-trash" aria-hidden="true"> Supprimer</i></a>
-                                </div>
-                            </div>
                             <br>
                             <div class="row">
-                                <div class="col-md-12">
-                                    <img src="{{ rubrique.image }}">
+                                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+                                    <img style="max-height: 150px; max-width: 100%" src="{{ rubrique.image }}">
+                                </div>
+                                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 btn-group-sm">
+                                    <a class="btn btn-primary" data-toggle="modal"
+                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id}    ) }}"><i class="fa fa-plus" aria-hidden="true"> new Post</i></a>
+                                    <a class="btn btn-warning" title="Modifier" data-toggle="modal"
+                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_rubrique_edit',  {'id': rubrique.id}    ) }}"><i class="fa fa-edit" aria-hidden="true"> Modifier</i></a>
+                                    <a class="btn btn-danger" title="Modifier" data-toggle="modal"
+                                       data-target="#post-form-modal" data-remote="false" href="{{ path('mh_newsletter_rubrique_delete',  {'id': rubrique.id}    ) }}"><i class="fa fa-trash" aria-hidden="true"> Supprimer</i></a>
+
                                 </div>
                             </div>
                         </div>
@@ -101,7 +98,7 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-info" target="_blank">
-                        <span class="glyphicon glyphicon-expand"></span>
+                        <span class="fa fa-expand"></span>
                         Afficher
                     </a>
                 </div>
@@ -110,7 +107,7 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <a href="{{ path('mh_newsletter_mail',{'id':newsletter.id}) }}" class="btn btn-default" target="_blank">
-                        <span class="glyphicon glyphicon-envelope"></span>
+                        <span class="fa fa-envelope"></span>
                         Mail
                     </a>
                 </div>
