--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/mail.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/mail.html.twig
@@ -10,12 +10,14 @@
 
     <i>Newsletter : {{ newsletter.name }} crée le {{ newsletter.date|date("m/d/Y à H:i:s", "Europe/Paris") }} par {{ newsletter.auteur }}</i>
 
-    <div class="well">
+    <div class="card">
+        <div class="card-body border-light">
             <a href="{{ path('mh_newsletter_home') }}" class="btn btn-default">
                 <i class="glyphicon glyphicon-chevron-left"></i>
                 Retour à la liste
             </a>
             {{ form(form) }}
+        </div>
     </div>
     <hr>
 {% endblock %}
