--- a/src/MH/NewsletterBundle/Resources/views/Post/add.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/add.html.twig
@@ -1,17 +1,20 @@
 {{ form_start(form) }}
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                aria-hidden="true">&times;</span></button>
     <h4 class="modal-title">Ajout du Post</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 
 <div class="modal-body">
-    <div class="well">
-        {{ form_row(form.titre) }}
-        {{ form_row(form.content) }}
-        {{ form_row(form.lien) }}
-        {{ form_row(form.textelien) }}
-        {{ form_row(form.date) }}
+    <div class="card border-primary">
+        <div class="card-body">
+            {{ form_row(form.titre) }}
+            {{ form_row(form.content) }}
+            {{ form_row(form.lien) }}
+            {{ form_row(form.textelien) }}
+            {{ form_row(form.date) }}
+        </div>
     </div>
 </div>
 
