--- a/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/delete.html.twig
@@ -1,28 +1,31 @@
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                aria-hidden="true">&times;</span></button>
     <h4 class="modal-title">Suppression du Post</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 
 <div class="modal-body">
-    <div class="well">
-        Titre : {{ post.titre }}<br>
-        Contenu :{{ post.content }}<br>
-        {% if post.lien is not empty %}
-            Lien : <a
-                    href="{{ post.lien }}"
-                    target="_blank"
-                    style="display: inline-block;text-decoration: none;font-family: Helvetica, Arial, sans-serif;color: #2c87c3;"><span
-                        style="color: #2c87c3;text-decoration: none;">> {{ post.textelien }}</span></a>
-        {% endif %}
-        <hr>
-        <p>La suppresion du post est irreversible<br>
-        Souhaitez-vous poursuivre ?</p>
+    <div class="card border-danger">
+        <div class="card-body">
+            Titre : {{ post.titre }}<br>
+            Contenu :{{ post.content }}<br>
+            {% if post.lien is not empty %}
+                Lien : <a
+                        href="{{ post.lien }}"
+                        target="_blank"
+                        style="display: inline-block;text-decoration: none;font-family: Helvetica, Arial, sans-serif;color: #2c87c3;"><span
+                            style="color: #2c87c3;text-decoration: none;">> {{ post.textelien }}</span></a>
+            {% endif %}
+            <hr>
+            <p>La suppresion du post est irreversible<br>
+            Souhaitez-vous poursuivre ?</p>
 
-        <form name="mh_newsletterbundle_post_delete" action="{{ path('mh_newsletter_post_delete', {'id':post.id}) }}" method="post">
-            <input type="submit" value="Supprimer" class="btn btn-danger"/>
-            {{ form_rest(form) }}
-        </form>
+            <form name="mh_newsletterbundle_post_delete" action="{{ path('mh_newsletter_post_delete', {'id':post.id}) }}" method="post">
+                <input type="submit" value="Supprimer" class="btn btn-danger"/>
+                {{ form_rest(form) }}
+            </form>
+        </div>
     </div>
 </div>
 
