--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
@@ -1,30 +1,33 @@
 
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                aria-hidden="true">&times;</span></button>
     <h4 class="modal-title">Suppression de la Rubrique</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 
 <div class="modal-body">
-    <div class="well">
-        Rubrique
-        Nom : {{ rubrique.name }}<br>
-        Icone : {{ rubrique.icone }}<br>
-        Image :{{ rubrique.image }}<br>
-        <br>
-        Posts associés :
-        {% for post in rubrique.posts | sortbyfield('position') %}
-           {{ post.titre }}
-        {% endfor %}
+    <div class="card border-danger">
+        <div class="card-body">
+            Rubrique
+            Nom : {{ rubrique.name }}<br>
+            Icone : {{ rubrique.icone }}<br>
+            Image :{{ rubrique.image }}<br>
+            <br>
+            Posts associés :
+            {% for post in rubrique.posts | sortbyfield('position') %}
+               {{ post.titre }}<br>
+            {% endfor %}
 
-        <hr>
-        <p>La suppresion de la Rubrique est irreversible et entrainera la suppression de tous les posts associés<br>
-            Souhaitez-vous poursuivre ?</p>
+            <hr>
+            <p>La suppresion de la Rubrique est irreversible et entrainera la suppression de tous les posts associés<br>
+                Souhaitez-vous poursuivre ?</p>
 
-        <form name="mh_newsletterbundle_rubrique_delete" action="{{ path('mh_newsletter_rubrique_delete', {'id':rubrique.id}) }}" method="post">
-            <input type="submit" value="Supprimer" class="btn btn-danger"/>
-            {{ form_rest(form) }}
-        </form>
+            <form name="mh_newsletterbundle_rubrique_delete" action="{{ path('mh_newsletter_rubrique_delete', {'id':rubrique.id}) }}" method="post">
+                <input type="submit" value="Supprimer" class="btn btn-danger"/>
+                {{ form_rest(form) }}
+            </form>
+        </div>
     </div>
 </div>
 
