--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/edit.html.twig
@@ -1,16 +1,19 @@
 
 {{ form_start(form) }}
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                aria-hidden="true">&times;</span></button>
     <h4 class="modal-title">Edition de la Rubrique</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 
 <div class="modal-body">
-    <div class="well">
-        {{ form_row(form.name) }}
-        {{ form_row(form.icone) }}
-        {{ form_row(form.image) }}
+    <div class="card border-warning">
+        <div class="card-body">
+            {{ form_row(form.name) }}
+            {{ form_row(form.icone) }}
+            {{ form_row(form.image) }}
+        </div>
     </div>
 </div>
 
