Add mail sending Improved Design by 1 color for 1 action

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -16,7 +16,7 @@
             <div class="card">
                 <div class="card-body">
                     {% for message in messages %}
-                        <div class="flash-{{ type }}">
+                        <div class="alert alert-success">
                             {{ message }}
                         </div>
                     {% endfor %}
