--- a/src/MH/NewsletterBundle/Resources/views/layout.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/layout.html.twig
@@ -5,13 +5,15 @@
 {% endblock %}
 
 {% block body %}
-    {% block bundle_body %}
-    {% endblock %}
     {% for flash_message in app.session.flashBag.get('notice') %}
-        <div class="well">
+        <div class="alert alert-success">
             {{ flash_message }}
         </div>
     {% endfor %}
+
+    {% block bundle_body %}
+    {% endblock %}
+
 
 {% endblock %}
 
