--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -41,15 +41,20 @@
             <li class="nav-item active">
             <li class="nav-item"><a class="nav-link" href="{{ path('mh_newsletter_home') }}">Accueil </a> </li>
             <li class="nav-item"><a class="nav-link" href="{{ path('mh_newsletter_doc_view') }}">Documentation</a> </li>
+        </ul>
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            <div class="navbar-text">Connecté en tant que {{ app.user.username }}</div>
+        {% endif %}
+        <ul class="navbar-nav">
             <li class="nav-item">
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                    Connecté en tant que {{ app.user.username }}
                     <a class="nav-link" href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
                 {% else %}
                     <a class="nav-link" href="{{ path('fos_user_security_login') }}">Connexion</a>
                 {% endif %}
             </li>
         </ul>
+
     </div>
 </nav>
 <div class="bg"></div>
