--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -22,6 +22,12 @@
                    name="_submit"
                value="{{ 'security.login.submit'|trans }}" />
         </div>
+            <br>
+
+            <br>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <a class="btn btn-primary btn-group-justified btn-block" href="{{ path('fos_user_resetting_request') }}"><i class="fa fa-repeat"></i> Mot de passe oublié</a>
+            </div>
         <br>
 
 
