--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="{{ asset('bundles/mhnewsletter/css/main.css') }}">
     {% else %}
        {% stylesheets
-        '@bootstrap_css'
-        '@jquery_ui_css'
+       '@jquery_ui_css'
+       '@bootstrap_css'
         '@main_css'
         '@font_awesome_css'
         '@simplemde_css'
@@ -44,16 +44,25 @@
         </ul>
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
             <div class="navbar-text">Connecté en tant que {{ app.user.username }}</div>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Réglages
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
+                        <a class="dropdown-item" href="{{ path('fos_user_change_password') }}">Changer mot de passe</a>
+                    </div>
+                </li>
+            </ul>
+        {% else %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                        <a class="nav-link" href="{{ path('fos_user_security_login') }}">Connexion</a>
+                </li>
+            </ul>
         {% endif %}
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                    <a class="nav-link" href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
-                {% else %}
-                    <a class="nav-link" href="{{ path('fos_user_security_login') }}">Connexion</a>
-                {% endif %}
-            </li>
-        </ul>
+
 
     </div>
 </nav>
